[gd_scene load_steps=7 format=3 uid="uid://40ioefgfpaqq"]

[ext_resource type="PackedScene" uid="uid://bbl433kompyk6" path="res://src/scenes/HealthComponent.tscn" id="1_03q6f"]
[ext_resource type="Script" uid="uid://dgwfp0kv2f1iu" path="res://src/scripts/enemyscripts/CellCarrier.gd" id="1_qq1er"]
[ext_resource type="Resource" uid="uid://b5em70wpw8nce" path="res://src/resources/EnemyResources/CellCarrierStats.tres" id="2_ptbow"]
[ext_resource type="PackedScene" uid="uid://c18fg3wrr8u2c" path="res://src/scenes/HitboxComponent.tscn" id="2_qq1er"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ptbow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8wgvr"]

[node name="CellCarrier" type="CharacterBody2D" groups=["Enemies"]]
script = ExtResource("1_qq1er")
STATS = ExtResource("2_ptbow")

[node name="PhysicsBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ptbow")

[node name="HealthComponent" parent="." instance=ExtResource("1_03q6f")]
MAX_HEALTH = 10.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_qq1er")]
health_component = NodePath("../HealthComponent")

[node name="BulletBox" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_8wgvr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="DebugPath" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="DebugPath" to="." method="_on_debug_path_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
